# dag-ml

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GB_backlog.txt  LICENSING.md  LICENSING_FR.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  contract_change.yml
.github/workflows/: ci.yml  release-crates.yml  release-npm.yml  release-python.yml  training-replay-contracts.yml  version-guard.yml
bindings/matlab/: README.md  buildNativeBinding.m
bindings/r/: DESCRIPTION  NAMESPACE  README.md
crates/dag-ml/: Cargo.toml
crates/dag-ml-arrow/: Cargo.toml
crates/dag-ml-arrow/src/: lib.rs
crates/dag-ml-capi/: Cargo.toml
crates/dag-ml-capi/include/: dag_ml.h
crates/dag-ml-capi/src/: lib.rs  local_implementation.rs
crates/dag-ml-capi/tests/: c_conformance.rs  local_implementations.rs  training_execute.rs
crates/dag-ml-cli/: Cargo.toml
crates/dag-ml-cli/src/: main.rs
crates/dag-ml-cli/tests/: cli_contracts.rs  training_contracts.rs
crates/dag-ml-core/: Cargo.toml
crates/dag-ml-core/src/: aggregation.rs  bundle.rs  campaign.rs  canonical.rs  chain_effect.rs  conformal.rs  controller.rs  controller_adapter.rs  controller_registry.rs  criteria.rs  data.rs  dsl.rs  error.rs  fold.rs  generation.rs  graph.rs  ids.rs  implementation_registry.rs  lib.rs  metric_provider.rs  metrics.rs  observability.rs  oof.rs  phase.rs  plan.rs  policy.rs  provenance.rs  relation.rs  replay.rs  rng.rs  runtime.rs  selection.rs  training.rs  training_runtime.rs
crates/dag-ml-core/src/dsl/: alias.rs  compat.rs  compat_helpers.rs  compiler.rs  fanout.rs  generation.rs  mod.rs  tests.rs  types.rs
crates/dag-ml-core/src/runtime/: artifact.rs  dataview.rs  merge.rs  mod.rs  oof.rs  prediction_store.rs  scheduler.rs  scoring.rs  task.rs  tests.rs
crates/dag-ml-core/tests/: conformal_w0_golden.rs  training_runtime_operation.rs
crates/dag-ml-core/tests/fixtures/: conformal_w0_golden.v1.json
crates/dag-ml-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/dag-ml-py/python/dag_ml/: __init__.py  __init__.pyi
crates/dag-ml-py/src/: in_process.rs  lib.rs  local_implementation.rs  training.rs
crates/dag-ml-py/tests/: test_local_implementation_registry.py  test_training_result.py
crates/dag-ml-wasm/: Cargo.toml  README.md
crates/dag-ml-wasm/src/: lib.rs  local_implementation.rs
crates/dag-ml/src/: lib.rs
docs/: ABI.md  AGGREGATION_INTEROP.md  ARCHITECTURE.md  CAPABILITY_MATRIX.md  COORDINATOR_SPEC.md  CRITERIA_CONTRACTS.md  FINAL_RELEASE_AUDIT.md  HETEROGENEOUS_MULTISOURCE_REPETITIONS_ROADMAP.md  HOST_ADAPTER_BACKLOG.md  LOSS_AND_METRIC_INVENTORY.md  LOSS_AND_METRIC_ROADMAP.md  MVP_ACCEPTANCE.md  OBSERVABILITY.md  OOF_FIXTURES.md  PERFORMANCE.md  RATIONALE.md  ROADMAP.md  STATUS.md  STUDIO_LITE_WASM_GAPS.md  SUPPORTED.md  TEST_PLAN.md  TOC.md  TRAINING_CONTRACTS.md  TRAINING_REPLAY_CONTRACTS.md  conf.py  index.md  installation.md  requirements.txt
docs/adr/: ADR-01-compatibility-ledger.md  ADR-02-schema-evolution-sla.md  ADR-03-separation-branch-semantics.md  ADR-04-tag-exclude-masks.md  ADR-05-repetition-cv-invariant.md  ADR-06-signal-type-ownership.md  ADR-07-aggregation-reducers.md  ADR-08-session-persistence.md  ADR-09-docs-stack.md  ADR-10-release-train.md  ADR-11-error-taxonomy.md  ADR-12-observability-hooks.md  ADR-13-process-adapter-security.md  ADR-14-deprecation-policy.md  ADR-15-gil-async.md  ADR-16-artifact-security.md  ADR-17-cutover-rollback.md  ADR-18-licensing.md  ADR-19-multisource-unit-vocabulary.md  ADR-20-conformal-calibration-ownership.md  ADR-21-forward-replay-ownership.md  ADR-22-training-loss-and-metric-ownership.md  README.md
docs/contracts/: README.md  abi_snapshot.v1.json  aggregation_controller_result.schema.json  aggregation_controller_result.v2.schema.json  aggregation_controller_task.schema.json  aggregation_controller_task.v2.schema.json  bound_training_output.v2.schema.json  cache_namespace.schema.json  campaign_spec.schema.json  chain_effect_analysis.schema.json  cohort_manifest.schema.json  conformal_calibration.schema.json  conformal_metric_set.schema.json  conformal_prediction_block.schema.json  conformal_robustness_conformance_pack.v1.json  conformance_pack.v1.json  controller_manifest.schema.json  coordinator_branch_view.schema.json  data_plan.schema.json  (+56 more)
examples/: README.md  branch_merge_oof_graph.json  campaign_branch_merge_oof.json  campaign_data_contract_nir_s001.json  campaign_oof_generation.json  campaign_oof_generation_param_overrides.json  campaign_oof_nested_cv.json  campaign_separation_branch_concat_merge_oof.json  controller_manifests.json  controller_manifests_alias_registry.json  controller_manifests_explain.json  minimal_graph.json  pipeline_dsl_branch_merge.json  pipeline_dsl_branch_merge_executable.json  pipeline_dsl_compact_generation.json  pipeline_dsl_coordinated_generation.json  pipeline_dsl_generation.json  pipeline_dsl_mixed_branch_merge_executable.json  pipeline_dsl_nirs4all_compat.json  pipeline_dsl_nirs4all_generator_parity.json  pipeline_dsl_nirs4all_parity.json  pipeline_dsl_registry_inferred_alias.json  pipeline_dsl_runtime_generation_executable.json  pipeline_dsl_separation_branch_view_plan.json  pipeline_dsl_shape_plan.json  pipeline_dsl_tuner_executable.json  separation_branch_concat_merge_oof_graph.json  sklearn_complex_oof_demo.py
parity/: schema_dependencies.py
parity/canonical/rust-oracle/: Cargo.toml
parity/canonical/rust-oracle/src/: lib.rs  main.rs
scripts/: check_deprecations.py  check_error_taxonomy.py  check_public_docs.py  check_so_freshness.py  lint_tracing_fields.py  requirements-contracts.txt  smoke_python_bindings.py  smoke_python_integration.py  smoke_python_wheel_metadata.py  smoke_wasm_bindings.cjs  smoke_wasm_integration.mjs  smoke_wasm_tarball_metadata.mjs  smoke_wasm_web_bindings.mjs  validate_abi_snapshot.py  validate_contracts.py  validate_release_metadata.py  validate_training_replay_contracts.py
(+149 files in other folders)
