[workspace]
resolver = "2"
members = [
    "crates/dag-ml-core",
    "crates/dag-ml",
    "crates/dag-ml-arrow",
    "crates/dag-ml-capi",
    "crates/dag-ml-cli",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/dag-ml"
homepage = "https://github.com/GBeurier/dag-ml"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dag-ml = { path = "crates/dag-ml" }
dag-ml-core = { path = "crates/dag-ml-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
sha2 = "0.10"
thiserror = "2.0"
