[workspace]
resolver = "2"
members = [
    "crates/dag-ml-core",
    "crates/dag-ml",
    "crates/dag-ml-arrow",
    "crates/dag-ml-capi",
    "crates/dag-ml-cli",
    "crates/dag-ml-py",
    "crates/dag-ml-wasm",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/dag-ml"
homepage = "https://github.com/GBeurier/dag-ml"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "=4.5.53", features = ["derive"] }
dag-ml = { path = "crates/dag-ml", version = "0.1.0-alpha.0" }
dag-ml-core = { path = "crates/dag-ml-core", version = "0.1.0-alpha.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10.4"
indexmap = "=2.13.1"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
pyo3 = "0.28.3"
wasm-bindgen = "0.2.122"
