[workspace]
resolver = "2"
members = [
    "crates/dag-ml-core",
    "crates/dag-ml",
    "crates/dag-ml-arrow",
    "crates/dag-ml-capi",
    "crates/dag-ml-cli",
    "crates/dag-ml-wasm",
]
# The PyO3 binding pins a minimum Python (`abi3-py311`), so pyo3-build-config
# refuses to build it against an older default interpreter. It is a leaf cdylib
# shipped as a PyPI wheel built with maturin against its own manifest
# (`cd crates/dag-ml-py && maturin build`) — never published to crates.io — so it
# is kept out of the default workspace + publish gate. `cargo test --workspace`
# and `cargo llvm-cov` then no longer require Python >= 3.11 on the host. This
# mirrors `dag-ml-data`'s excluded `dag-ml-data-r` and the sibling repos'
# excluded `bindings/python`. Build/test it standalone with
# `cargo test --manifest-path crates/dag-ml-py/Cargo.toml`.
exclude = ["crates/dag-ml-py"]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.83"
license = "CECILL-2.1 OR AGPL-3.0-or-later"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/dag-ml"
homepage = "https://github.com/GBeurier/dag-ml"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "=4.5.53", features = ["derive"] }
dag-ml = { path = "crates/dag-ml", version = "0.2.1" }
dag-ml-core = { path = "crates/dag-ml-core", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10.4"
indexmap = "=2.14.0"
sha2 = "0.11"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
pyo3 = "0.28.3"
wasm-bindgen = "0.2.122"
