[package]
name = "dag-ml-arrow"
description = "Apache Arrow IPC codec for dag-ml prediction cache payloads."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = "54"
dag-ml-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true
