[package]
name = "dag-ml-capi"
description = "C ABI surface for the DAG-ML control engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
dag-ml-core.workspace = true
serde.workspace = true
serde_json.workspace = true
