[package]
name = "dag-ml-cli"
description = "Validation CLI for DAG-ML specs and fixtures."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dag-ml-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true
