[package]
name = "dag-ml-core"
description = "Core graph, phase, OOF and deterministic control contracts for dag-ml."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
# Keep yaml_serde's transitive indexmap on a Rust 1.83-compatible release.
indexmap.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
