[package]
name = "dag-ml-py"
description = "Python bindings for DAG-ML JSON contracts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_dag_ml"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
dag-ml-core.workspace = true
pyo3 = { workspace = true, features = ["abi3-py311"] }
serde.workspace = true
serde_json.workspace = true
