# This crate is excluded from the root workspace (see ../../Cargo.toml): its
# `abi3-py311` floor would otherwise force `cargo test --workspace` /
# `cargo llvm-cov` to require Python >= 3.11 on the host. It is built standalone
# with maturin for the PyPI wheel, so it pins its own package metadata and
# dependency versions (kept in sync with the root workspace) instead of
# inheriting `*.workspace = true`, exactly like the excluded `dag-ml-data-r`
# and the sibling repos' `bindings/python`.
#
# Keep this as a workspace root so maturin still works when the repo is checked
# out inside another Cargo workspace during cross-repo CI.
[workspace]

[package]
name = "dag-ml-py"
description = "Python bindings for DAG-ML JSON contracts."
version = "0.2.3"
edition = "2021"
rust-version = "1.83"
license = "CECILL-2.1 OR AGPL-3.0-or-later"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/dag-ml"
homepage = "https://github.com/GBeurier/dag-ml"
publish = false

[lib]
name = "_dag_ml"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
dag-ml-core = { path = "../dag-ml-core", version = "0.2.3" }
pyo3 = { version = "0.28.3", features = ["abi3-py311"] }
pythonize = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
