[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "dag-ml"
version = "0.2.0"
description = "Python bindings for DAG-ML JSON contracts."
requires-python = ">=3.11"
license = "CECILL-2.1 OR AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "G. Beurier", email = "beurier@cirad.fr" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.maturin]
features = ["extension-module"]
module-name = "dag_ml._dag_ml"
python-source = "python"
