[package]
name = "dag-ml-wasm"
description = "WASM bindings for DAG-ML JSON contracts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dag-ml-core.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
